--- a/index.html
+++ b/index.html
@@ -1,64 +1,132 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juliana Diniz</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <title>Início</title>
 </head>
-<body>
-    <div class="container">
-        <!-- Header -->
-        <header>
-            <h1 class="header-text">Juliana Diniz</h1>
-            <div id="header-links-container">
-                <div id="header-links">
-                    <a href="#sobre" class="header-link">Sobre</a>
-                    <a href="#servicos" class="header-link">Serviços</a>
-                    <a href="#contato" class="header-link">Contato</a>
-                </div>
-            </div>
-        </header>
+<body class="container">
+    <header>
+        <h1 class="header-text">JULIANA DINIZ</h1>
+        <div id="header-links-container">
+            <h2 class="header-text">CUIDAR DA MENTE É <br>TRANSFORMAR A VIDA</h2><br>
+        </div>
+    </header>
 
-        <!-- Seção sobre -->
-        <section id="sobre" class="content">
-            <h2>Sobre Mim</h2>
-            <p>
-                Olá! Eu sou a Juliana Diniz, e este é o meu site pessoal. Trabalho como especialista em marketing digital e consultoria empresarial.
-                Tenho paixão por ajudar empresas a crescer e alcançar seus objetivos com estratégias inovadoras.
-            </p>
-            <img src="https://via.placeholder.com/800x400" alt="Juliana Diniz" class="image-body-content">
-        </section>
+    <div class="content">
+        <p><h3>Seu bem-estar em boas mãos</h3>
+        Tem algum obstáculo na sua vida particular que está tentando superar?<br>
+        Às vezes, procurar a ajuda de um especialista certificado é a melhor <br>maneira de colocar as coisas em perspectiva. <br><br>
 
-        <!-- Seção de Serviços -->
-        <section id="servicos" class="content">
-            <h2>Meus Serviços</h2>
+        Como Psicóloga profissional e comprometida com você, o seu bem-estar <br>e saúde mental são a minha prioridade. <br>
+        Terei o prazer de poder acompanhar você no caminho da superação dos <br>
+        desafios da vida, oferecendo-lhe a atenção e o cuidado merecido.
+        <br><br><br></p>
+
+        <h3>Sou especialista em</h3>
+        <p>
             <ul>
-                <li>Consultoria em Marketing Digital</li>
-                <li>Gestão de Mídias Sociais</li>
-                <li>Criação de Estratégias de Crescimento</li>
+                <li>AUTISMO</li>
+                <li>TDAH</li>
+                <li>TERAPIA COGNITIVA E COMPORTAMENTAL</li>
+                <li>ANSIEDADE</li>
+                <li>DEPRESSÃO</li>
+                <li>TRANSTORNOS DE PERSONALIDADE</li>
             </ul>
-        </section>
+        <br><br><br></p>
 
-        <!-- Seção de Contato -->
-        <section id="contato" class="contact-section">
-            <h3>Onde Me Encontrar</h3>
-            <div class="contact-icons">
-                <div class="contact-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Instagram_icon.png" alt="Instagram">
-                    <span>Instagram</span>
-                </div>
-                <div class="contact-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/LinkedIn_Logo_2023.png" alt="LinkedIn">
-                    <span>LinkedIn</span>
-                </div>
-                <div class="contact-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Email_icon_2010.png" alt="Email">
-                    <span>Email</span>
-                </div>
-            </div>
-        </section>
+        <h3>TERAPIA PARTICULAR</h3>
+        <p>
+            Imagine que você está em um barco navegando em um mar agitado. <br>
+            As ondas representam os desafios e as dificuldades da vida. Às vezes, <br>
+            essas ondas podem parecer esmagadoras, e você pode sentir que está <br>
+            perdendo o controle do barco. <br><br>
+
+            A terapia individual é como ter um navegador experiente ao seu lado. <br>
+            O terapeuta ajuda você a entender melhor o mar em que está navegando, <br>
+            identificar as ondas que são mais difíceis de enfrentar e encontrar <br>
+            maneiras de manter o barco estável. <br>
+            Juntos, vocês exploram novas rotas e estratégias para lidar com as tempestades, <br>
+            sempre com o objetivo de alcançar águas mais calmas. <br><br>
+
+            <img class="image-body-content" src="https://plus.unsplash.com/premium_photo-1665990294269-f1d6c35ab9d1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8cHN5Y2hvbG9neXxlbnwwfHwwfHx8MA%3D%3D" alt="">
+            <br>
+            Com o tempo, você aprende a confiar mais em suas habilidades de navegação <br>
+            e a enfrentar as ondas com mais confiança e resiliência. A terapia individual <br>
+            não remove as ondas, mas ajuda você a navegar por elas de maneira mais eficaz <br>
+            e com menos sofrimento. <br><br>
+            Você já pensou em como a terapia poderia ajudar a navegar pelas ondas da sua vida?
+        </p><br><br>
+
+        <h3>TERAPIA DE CASAL</h3>
+        <p>
+            Durante as sessões, o terapeuta ajuda o casal a identificar padrões de comportamento <br>
+            que podem estar causando problemas e oferece estratégias para mudar esses padrões. <br>
+            Isso pode incluir técnicas de comunicação eficaz, resolução de conflitos e construção <br>
+            de confiança <br><br>
+            <img src="https://images.unsplash.com/photo-1695903606887-af5c8cb8658a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDB8fGNvdXBsZSUyMHRoZXJhcHl8ZW58MHx8MHx8fDA%3D" alt="">
+
+            <br><br><br>A terapia de casal pode ser útil em várias situações, como: <br>
+            <strong>
+                <ul>
+                    <li>Problemas de comunicação: Quando os parceiros têm dificuldade em se expressar ou entender um ao outro.</li>
+                    <li>Conflitos frequentes: Discussões constantes que não são resolvidas de maneira saudável.</li>
+                    <li>Infidelidade: Superar a traição e reconstruir a confiança.</li>
+                    <li>Diferenças de valores ou objetivos: Quando os parceiros têm visões diferentes sobre aspectos importantes da vida.</li>
+                    <li>Estresse externo: Problemas financeiros, familiares ou de trabalho que afetam o relacionamento.</li>
+                </ul>
+            </strong>
+            O objetivo da terapia de casal é ajudar os parceiros a se reconectar e a trabalhar juntos <br>
+            para criar um relacionamento mais saudável e satisfatório. É um espaço seguro onde ambos <br>
+            podem expressar suas preocupações e sentimentos, com a orientação de um profissional que <br>
+            facilita o diálogo e a compreensão mútua. <br><br>
+        </p>
+
+        <h3>ANSIEDADE E DEPRESSÃO</h3><br>
+        <p> <img src="https://plus.unsplash.com/premium_photo-1666299236775-eb331093387a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjF8fGFueGlldHl8ZW58MHx8MHx8fDA%3D" alt="">
+            <br><br>A terapia é uma ferramenta poderosa no tratamento de transtornos de ansiedade e depressão, <br>
+            oferecendo uma série de benefícios significativos: <br>
+            <h4>Autoconhecimento:</h4> 
+            <ul>
+                <li>A terapia ajuda os pacientes a entenderem melhor seus sentimentos e comportamentos, identificando padrões que podem estar contribuindo para a ansiedade ou depressão.</li>
+            </ul>
+            <br>
+
+            <h4>Gestão de Sintomas:</h4>
+            <ul>
+                <li>Técnicas terapêuticas, como a terapia cognitivo-comportamental (TCC), ensinam estratégias para gerenciar e reduzir os sintomas de ansiedade e depressão, como pensamentos negativos e comportamentos disfuncionais.</li>
+            </ul>
+            <br>
+        
+            <h4>Desenvolvimento de Habilidades de Enfrentamento:</h4>
+            <ul>
+                <li>A terapia ajuda a desenvolver habilidades de enfrentamento saudáveis, permitindo que os pacientes lidem melhor com situações estressantes e desafiadoras.</li>
+            </ul>
+            <br>
+
+            <h4>Melhora na Qualidade de Vida:</h4>
+            <ul>
+                <li>Ao reduzir os sintomas e melhorar a gestão emocional, a terapia contribui para uma melhor qualidade de vida, aumentando a autoestima e promovendo um maior senso de controle sobre a própria vida.</li>
+            </ul>
+            <br>
+
+            <h4>Apoio Emocional:</h4>
+            <ul>
+                <li>Ter um espaço seguro para expressar sentimentos e preocupações pode ser extremamente reconfortante. O terapeuta oferece apoio emocional e validação, ajudando o paciente a se sentir ouvido e compreendido.</li>
+            </ul>
+            <br>
+
+            <h4>Prevenção de Recaídas:</h4>
+            <ul>
+                <li>A terapia não só trata os sintomas atuais, mas também ensina estratégias para prevenir recaídas futuras, promovendo uma recuperação duradoura.</li>
+            </ul>
+            Esses benefícios tornam a terapia uma opção valiosa para quem enfrenta transtornos de ansiedade e depressão. <br>
+            Se você ou alguém que você conhece está passando por esses desafios, considerar a terapia pode ser um passo importante para a recuperação e o bem-estar.
+        </p>
     </div>
 </body>
 </html>
