--- a/index.html
+++ b/index.html
@@ -128,12 +128,11 @@
             Se você ou alguém que você conhece está passando por esses desafios, considerar a terapia pode ser um passo importante para a recuperação e o bem-estar.
         </p>
     </div>
-    
-<!-- Seção de Contato -->
-<footer class="contato">
+    <!-- Seção de Contato -->
+<div class="content contato-section">
     <h3>Entre em Contato</h3>
-    <p>Está pronto(a) para começar sua jornada de transformação? Entre em contato comigo:</p>
-    
+    <p>Está pronto(a) para começar sua jornada de transformação? Fale comigo:</p>
+
     <form class="formulario-contato" action="mailto:seuemail@example.com" method="POST" enctype="text/plain">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required>
@@ -147,8 +146,9 @@
         <button type="submit">Enviar</button>
     </form>
 
-    <p class="contato-info">Ou se preferir, envie um e-mail para: <a href="mailto:seuemail@example.com">seuemail@example.com</a></p>
-</footer>
+    <p class="contato-info">Ou envie um e-mail para: <a href="mailto:seuemail@example.com">seuemail@example.com</a></p>
+</div>
+
 
 </body>
 </html>
