--- a/index.html
+++ b/index.html
@@ -127,26 +127,24 @@
             Esses benefícios tornam a terapia uma opção valiosa para quem enfrenta transtornos de ansiedade e depressão. <br>
             Se você ou alguém que você conhece está passando por esses desafios, considerar a terapia pode ser um passo importante para a recuperação e o bem-estar.
         </p>
-    </div>
-    <!-- Seção de Contato -->
-<div class="content contato-section">
+    </div><div class="content contato-section">
     <h3>Entre em Contato</h3>
-    <p>Está pronto(a) para começar sua jornada de transformação? Fale comigo:</p>
+    <p>Está pronto(a) para começar sua jornada de transformação? Fale comigo diretamente:</p>
 
-    <form class="formulario-contato" action="mailto:seuemail@example.com" method="POST" enctype="text/plain">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required>
+    <p>Você pode me contatar pelo WhatsApp ou enviar um e-mail. Escolha a forma que preferir:</p>
 
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required>
+    <div class="contato-info">
+        <h4>WhatsApp:</h4>
+        <p>Envie uma mensagem direta para o meu WhatsApp:</p>
+        <a href="https://wa.me/558781708016" target="_blank" class="btn-whatsapp">
+            Iniciar conversa no WhatsApp
+        </a>
+    </div>
 
-        <label for="mensagem">Mensagem:</label>
-        <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
-
-        <button type="submit">Enviar</button>
-    </form>
-
-    <p class="contato-info">Ou envie um e-mail para: <a href="mailto:seuemail@example.com">seuemail@example.com</a></p>
+    <div class="contato-info">
+        <h4>E-mail:</h4>
+        <p>Ou envie um e-mail para: <a href="mailto:seuemail@example.com">psijulianadiniz@gmail.com</a></p>
+    </div>
 </div>
 
 
