--- a/index.html
+++ b/index.html
@@ -148,5 +148,48 @@
 </div>
 
 
+<style>
+    .contato-section {
+        text-align: center;
+        margin: 20px;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        background-color: #f9f9f9;
+    }
+
+    .contato-info {
+        margin-bottom: 20px;
+    }
+
+    .btn-whatsapp {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #25D366; /* Cor do WhatsApp */
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        transition: background-color 0.3s;
+    }
+
+    .btn-whatsapp:hover {
+        background-color: #128C7E;
+    }
+
+    h4 {
+        margin-top: 20px;
+        font-size: 18px;
+    }
+
+    a {
+        color: #007BFF;
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+</style>
 </body>
 </html>
