--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1 class="header-text">JULIANA DINIZ</h1>
         <div id="header-links-container">
-            <h2 class="header-text">CUIDAR DA MENTE É <br>TRANSFORMAR A VIDA</h2><br>
+            <h2 class="header-text">CUIDAR DA MENTE É TRANSFORMAR A VIDA</h2><br>
         </div>
     </header>
 
